infrstructure_using_terraform/network/routetables.tf
#  Create Public Route Table
resource "aws_route_table" "public_route_table" {
  vpc_id = aws_vpc.node_js_vpc.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.my_internet_gateway.id
  }

  tags = {
    Name = "${var.project_tag}-public"
  }
}

#  Create Private Route Table
resource "aws_route_table" "private_route_table" {
  vpc_id = aws_vpc.node_js_vpc.id
  route {
    cidr_block     = "0.0.0.0/0"
    nat_gateway_id = aws_nat_gateway.nat.id
  }
  tags = {
    Name = "${var.project_tag}-private"
  }
}

#  Associate Public Route Table with Public Subnet
resource "aws_route_table_association" "public_route_table_association" {
  subnet_id      = aws_subnet.public_subnet.id
  route_table_id = aws_route_table.public_route_table.id
}

#  Associate Private Route Table with Private Subnet
resource "aws_route_table_association" "private_route_table_association" {
  subnet_id      = aws_subnet.private_subnet.id
  route_table_id = aws_route_table.private_route_table.id
}
